# pomo

./: CHANGELOG.md  README.md  mise.toml  pyproject.toml
.github/workflows/: release-please.yaml  release.yaml  workflow.yaml
pomo/: __init__.py  config.py  db.py  main.py  notify.py  output.py  status.py  timer.py
scripts/: setup
tests/: __init__.py  test_cli.py  test_notify.py
