[project]
name = "pomo"
version = "0.2.0"
description = "A pomodoro timer CLI with quantified-self tracking"
authors = [{ name = "Mischa van den Burg" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer[all]>=0.12.3",
    "psycopg[binary]>=3.2.0",
]

[project.scripts]
pomo = "pomo.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]
